--- a/Restaurante/src/main/resources/application.properties
+++ b/Restaurante/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Restaurante
 
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurante_bd
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://44.201.114.163:3306/restaurante_bd
+spring.datasource.username=admin
+spring.datasource.password=adminpass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
